add naviViewController on storyboard, edit info.plist

--- a/TrailMix/Info.plist
+++ b/TrailMix/Info.plist
@@ -40,6 +40,8 @@
 	<array>
 		<string>location</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Holla</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
