--- a/TrailMix WatchKit Extension/TrailMix WatchKit Extension.entitlements
+++ b/TrailMix WatchKit Extension/TrailMix WatchKit Extension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.flatironschool.trailmix</string>
+		<string>group.congsun.trailmix</string>
 	</array>
 </dict>
 </plist>
