Changing application display name

--- a/TrailMix/Info.plist
+++ b/TrailMix/Info.plist
@@ -51,5 +51,7 @@
 	</array>
 	<key>UIViewEdgeAntialiasing</key>
 	<true/>
+	<key>CFBundleDisplayName</key>
+	<string>Trailmix</string>
 </dict>
 </plist>
